--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Heading 1</h1>
+    <h1 style="color:blue;">Heading 1</h1>
     <h2>Second Heading</h2>
     Hello world !
 </body>
